Migrar a GenApp 2.0 #686 (Compilació i Presentació de Llistats)